# AvocadoDash

./: .dockerignore  .gitignore  .trivyignore.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-socket-firewall.yml
docs/: README_EN.md
scripts/: verify_slack_webhook.sh
specs/: ci-pipeline-plan.md  ci-pipeline.md  contextual-tooltips-plan.md  contextual-tooltips.md  dashboard-visual-identity.md  export-filtered-csv-plan.md  export-filtered-csv.md  multi-region-comparison-plan.md  multi-region-comparison.md  spanish-language-toggle-plan.md  spanish-language-toggle.md  structured-error-logging-plan.md  structured-error-logging.md  summary-panel-plan.md  summary-panel.md
src/: app.py  translations.py  utils.py
src/assets/: style.css
tests/: test_app.py  test_style.py  test_translations.py
