[tool.poetry]
name = "env-dash"
version = "0.1.0"
description = ""
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "^2.3.2"
dash = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
