[tool.poetry]
name = "env-dash"
version = "0.1.0"
description = ""
authors = ["Kuautli <cuauhtemocbe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.3.2"
dash = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.21,<0.16.0"
pytest = ">=9.1.1,<10.0.0"
mypy = ">=1.14.0,<2.0.0"
pandas-stubs = ">=2.2.0"
pytest-cov = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
